# sbert-chromadb

./: .gitignore  README.md  insert_data.py  job.ipynb  pyproject.toml
query_server/: main.py
