[tool.poetry]
name = "sbertchromadb"
version = "0.1.0"
description = ""
authors = ["juhwanlee <juhwanlee@diquest.com>"]
readme = "README.md"
packages = [{include = "generation_dataset_with_llm"}]

[tool.poetry.dependencies]
python = "~3.10"
torch = "2.0.0"
pandas = "2.0.0"
chromadb = "0.5.1"
pysqlite3-binary = "^0.5.3"
sentence-transformers = "^3.0.1"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
